--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=springboot-crud
+# Data source
 spring.datasource.url=jdbc:mysql://localhost:3306/db_jpa_crud
 spring.datasource.username=root
 spring.datasource.password=sasa1234
+#Jpa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
+#Message
+spring.messages.basename=i18n/messages
